syntax = "proto3";  
// import 'bsn/pb/agent2agentproxy/login.proto';
package bsn.pb.agent_agentproxy.cmd;  
  
enum EMsgId2AgentProxy {
    EMsgId2AgentProxy_Null = 0;
    
    EMsgId2AgentProxy_CheckId = 3;
    EMsgId2AgentProxy_GetId = 1;
    EMsgId2AgentProxy_LoginReq = 2;

    EMsgId2AgentProxy_ToAgent = 100;
}

enum EMsgId2Agent {
    EMsgId2Agent_Null = 0;
    
    EMsgId2Agent_LoginRes = 1;
    EMsgId2Agent_FromAgent = 2;
}

 
